--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-gray-100">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,12 +13,13 @@
     "@google/genai": "https://next.esm.sh/@google/genai@^1.13.0?external=rxjs",
     "@angular/platform-browser": "https://next.esm.sh/@angular/platform-browser@^20.1.6-0?external=rxjs",
     "@angular/core": "https://next.esm.sh/@angular/core@^20.1.6-0?external=rxjs",
-    "@angular/compiler": "https://next.esm.sh/@angular/compiler@^20.1.6-0?external=rxjs"
+    "@angular/compiler": "https://next.esm.sh/@angular/compiler@^20.1.6-0?external=rxjs",
+    "marked": "https://next.esm.sh/marked@^16.3.0?external=rxjs"
   }
 }
 </script>
 </head>
-<body class="bg-slate-900">
+<body class="bg-gray-100">
   <app-root></app-root>
 </body>
 </html>
