--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-gray-100">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
 }
 </script>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 dark:bg-slate-900 antialiased">
   <app-root></app-root>
 </body>
 </html>
