--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   "imports": {
     "rxjs": "https://esm.sh/rxjs@^7.8.2?conditions=es2015",
     "rxjs/operators": "https://esm.sh/rxjs@^7.8.2/operators?conditions=es2015",
-    "@google/genai": "https://next.esm.sh/@google/genai@^1.13.0?external=rxjs",
-    "@angular/platform-browser": "https://next.esm.sh/@angular/platform-browser@^20.1.6-0?external=rxjs",
-    "@angular/core": "https://next.esm.sh/@angular/core@^20.1.6-0?external=rxjs",
-    "@angular/compiler": "https://next.esm.sh/@angular/compiler@^20.1.6-0?external=rxjs",
-    "marked": "https://next.esm.sh/marked@^16.3.0?external=rxjs"
+    "@google/genai": "https://esm.sh/@google/genai@^1.13.0?external=rxjs",
+    "@angular/platform-browser": "https://esm.sh/@angular/platform-browser@^20.1.6-0?external=rxjs",
+    "@angular/core": "https://esm.sh/@angular/core@^20.1.6-0?external=rxjs",
+    "@angular/compiler": "https://esm.sh/@angular/compiler@^20.1.6-0?external=rxjs",
+    "marked": "https://esm.sh/marked@^16.3.0?external=rxjs"
   }
 }
 </script>
