--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 </head>
 <body class="bg-gray-100 dark:bg-slate-900 antialiased">
   <app-root></app-root>
+  <script type="module" src="index.tsx"></script>
 </body>
 </html>
